feat: current timer and tab navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["breakend", "breakstate", "timeup"]
+  "cSpell.words": ["breakend", "breakstate", "btntab", "navtab", "timeup"]
 }
