feat: add timer display functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["breakend", "breakstate", "btntab", "navtab", "timeup"]
+  "cSpell.words": [
+    "breakend",
+    "breakstate",
+    "btntab",
+    "flexbox",
+    "navtab",
+    "Pomodoro",
+    "timeup"
+  ]
 }
