feat: refactor timer and stopwatch components | enhance UI and functionality - Updated HTML structure for timer and stopwatch sections to improve readability and maintainability. - Enhanced CSS with new variables for colors, font sizes, and spacing for better design consistency. - Refactored JavaScript to streamline event handling and improve code organization. - Added new classes for better styling and accessibility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
   "cSpell.words": [
     "breakend",
     "breakstate",
+    "Btns",
     "btntab",
     "flexbox",
     "navtab",
     "Pomodoro",
+    "redisplaying",
     "timeup",
     "yellowdark"
   ]
